Fixed a case error in the link.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of January 10<sup>th</sup>, 2021, the current server is <a href="SolarpunkOasisV0.8b.zip">Solarpunk Oasis V0.8b</a>.</p>
+<p>As of January 10<sup>th</sup>, 2021, the current server is <a href="SolarPunkOasisV0.8b.zip">Solarpunk Oasis V0.8b</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno.</p>
 
@@ -45,7 +45,7 @@
 <h3>Download the Imagine No Dragons client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="SolarpunkOasisV0.8b.zip">Solarpunk Oasis V0.8b</a></p>
+<a href="SolarPunkOasisV0.8b.zip">Solarpunk Oasis V0.8b</a></p>
 
 
 <h3>Install the instance in MultiMC.</h3>
