Updated to Interlude 2.2 and explained setting up discochat

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 
-<h1>TAG Minecraft Server: Solarpunk Oasis</h1>
+<h1>TAG Minecraft Server: Interlude</h1>
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of January 2<sup>nd</sup>, 2021, the current server is <a href="SolarpunkOasisV0.7.zip">Solarpunk Oasis V0.7</a>.</p>
+<p>As of April 20<sup>th</sup>, 2021, the current server is <a href="InterludeV2.2.zip">Interlude V2.2</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno.</p>
 
@@ -19,7 +19,7 @@
 <p>This is a bit of an experimental server and may be slightly more prone to bugs and crashes than a vanilla Minecraft server. Please be patient with our benevolent server admin!</p>
 <p>This modpack is for private distribution and use only. This is necessary in order to keep us in compliance with the licenses and modpack policies of some of the mods included in the pack. Therefore, please do not publicly redistribute or re-host this modpack.</p>
 
-<h2>DISCORD: HELP, BUGS, & GENERAL COMMUNICATION</h2>
+<h2>DISCORD: HELP, BUGS, &amp; GENERAL COMMUNICATION</h2>
 <ul>
 <li>Please join our Discord in order to keep in touch!</li>
 <li>Check for modpack updates and find the download links (the modpack will be updated periodically, requiring you to update your instance).</li>
@@ -45,7 +45,7 @@
 <h3>Download the Imagine No Dragons client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="SolarpunkOasisV0.7.zip">Solarpunk Oasis V0.7</a></p>
+<a href="InterludeV2.2.zip">Interlude V2.2</a></p>
 
 
 <h3>Install the instance in MultiMC.</h3>
@@ -63,7 +63,14 @@ Do not unpack it!<br/>
 
 <h3>Connecting to the server</h3>
 The server address is: 142.4.205.195:25638
-You can name it anything you want.
+You can name it anything you want. It should be listed there by default as it's included in the current modpack.
+
+<h3>Setting up Discord Integration</h3>
+If you link your MC account to your Discord account in the above channel, you can chat and listen in both at the same time
+From inside Minecraft, type:
+<code>/discord link [user] [descriminator]</code>
+If you click on your name in Discord, see your icon, your in-chat name and then something of the format [user]#[descriminator]. Just use that information with the above command in minecraft and you'll get a message from our bot within discord to verify, then you're connected.  
+
 
 <h3>Updating your instance</h3>
 <p>Occasionally, the modpack will be updated to fix bugs and add new features. When this occurs, an announcement will be made on Discord, along with instructions. The process will be similar to installing the original package and importing the downloaded ZIP (as a new instance into MultiMC, as described in the standard installation instructions in Parts II-III).
