--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of April 20<sup>th</sup>, 2021, the current server is <a href="InterludeV2.2.zip">Interlude V2.2</a>.</p>
+<p>As of April 21<sup>th</sup>, 2021, the current server is <a href="InterludeV2.3.zip">Interlude V2.3</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno.</p>
 
@@ -45,7 +45,7 @@
 <h3>Download the Imagine No Dragons client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="InterludeV2.2.zip">Interlude V2.2</a></p>
+<a href="InterludeV2.3.zip">Interlude V2.3</a></p>
 
 
 <h3>Install the instance in MultiMC.</h3>
@@ -63,7 +63,7 @@ Do not unpack it!<br/>
 
 <h3>Connecting to the server</h3>
 The server address is: 142.4.205.195:25638
-You can name it anything you want. It should be listed there by default as it's included in the current modpack.
+You can name it anything you want. It should be listed there by default if it's included in the current modpack, but if it's not, this is what you'd add.
 
 <h3>Setting up Discord Integration</h3>
 If you link your MC account to your Discord account in the above channel, you can chat and listen in both at the same time
