Updated to Interlude 2.4, included mac Java rollback instructions

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of April 21<sup>th</sup>, 2021, the current server is <a href="InterludeV2.3.zip">Interlude V2.3</a>.</p>
+<p>As of April 22<sup>th</sup>, 2021, the current server is <a href="InterludeV2.4.zip">Interlude V2.4</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno.</p>
 
@@ -45,7 +45,7 @@
 <h3>Download the Imagine No Dragons client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="InterludeV2.3.zip">Interlude V2.3</a></p>
+<a href="InterludeV2.4.zip">Interlude V2.4</a></p>
 
 
 <h3>Install the instance in MultiMC.</h3>
@@ -55,6 +55,12 @@ Do not unpack it!<br/>
 <p>In the pop-up window, select the "Import from zip" option, and use the "Browse" button to locate the zip file you downloaded. After you press OK, MultiMC may appear to hang for a few minutes while it deploys the instance, but it should recover.</p>
 
 <p>An icon for the modpack should now appear in the main MultiMC window. Simply double-click on it to launch the game!</p>
+
+<p>If you are on a mac, you will need to roll back Java:</p>
+<ol>
+	<li>Get the right verrsion: <a href="https://javadl.oracle.com/webapps/download/GetFile/1.8.0_251-b08/3d5a2bb8f8d4428bbe94aed7ec7ae784/unix-i586/jdk-8u251-macosx-x64.dmg">1.8.0_251</a></li>
+	<li>Once that is installed, you'll need to right click and "Edit Instance" the Interlude instance, go to "Settings" tab, check "Java Installation", click Autodetect, and choose version 251 from the list.</li>
+</ol>
 
 <h3>Running the game</h3>
 <p>Double click on the instance, wait, this might take a while.</p>  
