Made java rollback for mac more prominent

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -56,7 +56,7 @@ Do not unpack it!<br/>
 
 <p>An icon for the modpack should now appear in the main MultiMC window. Simply double-click on it to launch the game!</p>
 
-<p>If you are on a mac, you will need to roll back Java:</p>
+<p><b style="color: red">If you are on a mac, you will need to roll back Java:</b></p>
 <ol>
 	<li>Get the right verrsion: <a href="https://javadl.oracle.com/webapps/download/GetFile/1.8.0_251-b08/3d5a2bb8f8d4428bbe94aed7ec7ae784/unix-i586/jdk-8u251-macosx-x64.dmg">1.8.0_251</a></li>
 	<li>Once that is installed, you'll need to right click and "Edit Instance" the Interlude instance, go to "Settings" tab, check "Java Installation", click Autodetect, and choose version 251 from the list.</li>
