Properly citing the author of the original incarnation

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,7 @@
 
 <p>As of April 22<sup>th</sup>, 2021, the current server is <a href="InterludeV2.4.zip">Interlude V2.4</a>.</p>
 
-<p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno.</p>
+<p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Michael Iantorno and Nic Watson.</p>
 
 <h2>WARNINGS AND DISCLAIMERS</h2>
 <p><b>PRIVACY NOTICE:</b> In-game chat messages are forwarded both to the server console (for technical reasons) and to our Discord channel (so that people out-of-game can converse with those in-game). These messages also end up saved in durable records (server logs, which are used for diagnostic purposes; the Discord channel, which keeps past messages unless they are manually purged). Furthermore, our service provider has the technical ability to monitor traffic and access our server logs (this doesn't mean that they will, just that they can). This means that people may be able to listen to your in-game conversations even if they do not appear to be signed in. Do not treat in-game conversation as private, no matter how few people appear to be logged on. Although in-game player-to-player "private messages" are not normally displayed on the server console or Discord, they also have no meaningful software protection to prevent leaks or eavesdropping, so they should not be regarded as secure. We cannot guarantee the privacy or security of any in-game communications.</p>
