Got rid of adaptive Tweaks since it was overriding important settings

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of April 23<sup>th</sup>, 2021, the current server is <a href="InterludeV2.5.zip">Interlude V2.5</a>.</p>
+<p>As of April 24<sup>th</sup>, 2021, the current server is <a href="InterludeV2.5b.zip">Interlude V2.5b</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Nic Watson for Miasma and revised by Michael Iantorno for Imagine No Dragons.</p>
 
@@ -45,7 +45,7 @@
 <h3>Download the Imagine No Dragons client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="InterludeV2.5.zip">Interlude V2.5</a></p>
+<a href="InterludeV2.5b.zip">Interlude V2.5b</a></p>
 
 
 <h3>Install the instance in MultiMC.</h3>
