--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of April 24<sup>th</sup>, 2021, the current server is <a href="InterludeV2.5b.zip">Interlude V2.5b</a>.</p>
+<p>As of April 24<sup>th</sup>, 2021, the current server is <a href="InterludeV2.5c.zip">Interlude V2.5c</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Nic Watson for Miasma and revised by Michael Iantorno for Imagine No Dragons.</p>
 
@@ -55,7 +55,7 @@
 <h3>Download the Interlude client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="InterludeV2.5b.zip">Interlude V2.5b</a></p>
+<a href="InterludeV2.5c.zip">Interlude V2.5c</a></p>
 
 
 <h3>(MOJANG ACCOUNTS ONLY) Install the instance in MultiMC.</h3>
@@ -97,7 +97,7 @@ Do not unpack it!<br/>
 <p>Then click on multiplayer. The server should already be listed.</p> 
 
 <h3>Connecting to the server</h3>
-The server address is: 142.4.205.195:25638
+The server address is: 204.44.125.19:31337
 You can name it anything you want. It should be listed there by default if it's included in the current modpack, but if it's not, this is what you'd add.
 
 <h3>Setting up Discord Integration</h3>
@@ -119,6 +119,15 @@ Important: This will reset any configuration changes (such as maps and guideline
 <li>To keep your Xaero's Minimap (both the map images and waypoints), copy both Xaero folders from the old instance to the new one.</li>
 <li>(Optional) If you customized any other mod-specific options you will need to find the corresponding configuration file in the old instance's config subfolder and copy it to the new instance's config folder.</li>
 <li>You don't have to delete your old instance, but if you choose to, remember to back up any single player worlds and screenshots that might still be stored there.</li>
+</ol>
+
+If the server changes, you have to do extra steps to move your XaeroMap and waypoints:
+If you want to keep your old XaeroMap and waypoints. In the following example, the old ip would be <b>142.4.205.195</b> and the new one would be <b>204.44.125.19</b>:
+<ol>
+<li>Connect to new server once.</li>
+<li>Go into your .minecraft folder, then XaeroWaypoints subfolder</li>
+<li>You should see folders Multiplayer_142.4.205.195 and Multiplayer_204.44.125.19. Copy everything from Multiplayer_142.4.205.195 to Multiplayer_204.44.125.19</li>
+<li>Back out to .minecraft folder, go into XaeroWorldMap, and do the same thing.</li>
 </ol>
 </body>
 </html>
