--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 
 <p>You can request changes for this page by making Pull Requests to <a href="https://github.com/ramou/TagMinecraftServer">this repo</a>.</p>
 
-<p>As of April 24<sup>th</sup>, 2021, the current server is <a href="InterludeV2.5c.zip">Interlude V2.5c</a>.</p>
+<p>As of June 3<sup>rd</sup>, 2021, the current server is <a href="InterludeV2.7.zip">Interlude V2.7</a>.</p>
 
 <p>The following instructions are pulled almost verbatim from the Installation Guide prepared by Nic Watson for Miasma and revised by Michael Iantorno for Imagine No Dragons.</p>
 
@@ -55,7 +55,7 @@
 <h3>Download the Interlude client instance</h3>
 <p>Download the ZIP file, and save it anywhere on your hard drive.<br/> 
 Do not unpack it!<br/>
-<a href="InterludeV2.5c.zip">Interlude V2.5c</a></p>
+<a href="InterludeV2.7.zip">Interlude V2.7</a></p>
 
 
 <h3>(MOJANG ACCOUNTS ONLY) Install the instance in MultiMC.</h3>
